--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,15 +20,17 @@
                 <div class="card-content">
                     <span class="card-title">Add Task</span>
                     <div class="row">
-                        <form class="col s12" id="add-task">
+                        <form class="col s12" id="add-task" method="post" action="/add-task">
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input type="text" id="task">
+                                    <input type="text" id="task" name="user_task">
                                     <label for="task">Add new task</label>
                                 </div>
                             </div>
                             <div class="row">
-                                <input type="submit" class="btn" value="Add task">
+                                <div class="col">
+                                    <input type="submit" class="btn" value="Add task">
+                                </div>
                             </div>
                         </form>
                     </div>
@@ -37,13 +39,13 @@
                     <p class="card-title" id="task-title">Tasks</p>
                     <ul class="collection" id="task-list">
                         <% tasksData.forEach((taskElement) => { %>
-                        <li class="collection-item">
-                            <%= taskElement.task %>
-                            <a href="delete-task/<%= taskElement.id %>" class="secondary-content">X</a>
-                        </li>
-                    <% }) %>
+                            <li class="collection-item">
+                                <%= taskElement.task %>
+                                <a href="delete-task/<%= taskElement.id %>" class="secondary-content">X</a>
+                            </li>
+                    <%})%>
                     </ul>
-                    <a href="#" id="delete-tasks" class="btn">Delete All</a>
+                    <a href="delete-all" id="delete-tasks" class="btn">Delete All</a>
                 </div>
             </div>
         </div>
